# factorio-data-guide

./: ChangeLog.md  LICENSE  README.md  default.nix  factorio-data-guide.cabal  factorio-data-guide.nix  stack.yaml
src/Game/FactorioData/: Calc.hs  Foo.hs  Types.hs
src/Game/FactorioData/Calc/: Manifest.hs  Types.hs
