
name:                factorio-data-guide
version:             0.1.0.0
synopsis:            Data library and calculators for Factorio
-- description:
homepage:            https://github.com/johnsonwj/factorio-data-guide
license:             BSD3
license-file:        LICENSE
author:              William Johnson
maintainer:          package-maintainer@willj.dev
copyright:           2019 William Johnson
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:    Game.FactorioData.Types
                    , Game.FactorioData.Calc.Types
  -- other-modules:
  -- other-extensions:
  build-depends:      base
                    , unordered-containers
                    , data-default
                    , recursion-schemes
                    , text
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:  OverloadedStrings

executable factorio-data-guide
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
