cabal-version:       2.4

name:                factorio-data-guide
version:             0.1.0.0
synopsis:            Data library and calculators for Factorio
-- description:
homepage:            https://github.com/johnsonwj/factorio-data-guide
license-file:        LICENSE
author:              William Johnson
maintainer:          package-maintainer@willj.dev
copyright:           2019 William Johnson
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

common opts
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fplugin=Polysemy.Plugin -flate-specialise -fspecialise-aggressively

common exts
  default-extensions:  OverloadedStrings, GADTs, DataKinds, FlexibleContexts, LambdaCase, PolyKinds, RankNTypes, ScopedTypeVariables, TypeApplications, TypeOperators, TypeFamilies

library
  import: opts, exts
  exposed-modules: Game.FactorioData.Foo
  -- exposed-modules:    Game.FactorioData.Types
  --                   , Game.FactorioData.Calc
  --                   , Game.FactorioData.Calc.Manifest
  --                   , Game.FactorioData.Calc.Types
  -- other-modules:
  -- other-extensions:
  build-depends:      base
                    , unordered-containers
                    , data-default
                    , recursion-schemes
                    , data-fix
                    , text
                    , polysemy
                    , polysemy-plugin
  hs-source-dirs:     src
  default-language:   Haskell2010

executable factorio-data-guide
  import: opts, exts
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
